--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: 研究室ホームページテンプレート
 description: 研究室ホームページに特化した無料のホームページテンプレートです
 
 url: "https://academeia.github.io/web_template.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "/web_template" # the subpath of your site, e.g. /blog
+baseurl: "/web_template.github.io" # the subpath of your site, e.g. /blog
 
 # Build settings
 remote_theme: pages-themes/cayman@v0.2.0
